tests/compile_fail/wrong_realm_add.stderr
warning: unused variable: `ptr`
  --> tests/compile_fail/wrong_realm_add.rs:27:9
   |
27 |     let ptr = arena2.add(container);
   |         ^^^ help: if this is intentional, prefix it with an underscore: `_ptr`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0597]: `_pin` does not live long enough
  --> tests/compile_fail/wrong_realm_add.rs:22:5
   |
22 |     dreck!(_owner2, arena2);
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     binding `_pin` declared here
...
30 | }
   | -
   | |
   | `_pin` dropped here while still borrowed
   | borrow might be used here, when `_lifetime_constrainer` is dropped and runs the `Drop` code for type `main::KeepTillScopeDrop`
   |
   = note: values in a scope are dropped in the opposite order they are defined
   = note: this error originates in the macro `dreck` (in Nightly builds, run with -Z macro-backtrace for more info)
